unpackaged/objects/BusinessReport__c.object
<CustomObject>
    <fields>
        <fullName>CarNumLease__c</fullName>
        <label>台数）リース</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CarNumOwner__c</fullName>
        <label>台数）所有</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CrrntAssistanceCompany__c</fullName>
        <label>現状）アシスタンス会社</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOS</fullName>
                </value>
                <value>
                    <fullName>SSC</fullName>
                </value>
                <value>
                    <fullName>EAJ</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>インタック</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CrrntAssistanceMankiDate__c</fullName>
        <label>現状）アシスタンス　満期日</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntBlCompany_1__c</fullName>
        <label>現状）BL保険会社_1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntBlCompany_2__c</fullName>
        <label>現状）BL保険会社_2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntBlCompany_3__c</fullName>
        <label>現状）BL保険会社_3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntBlInsuranceFeeCurrency_1__c</fullName>
        <label>見込）BL保険料通貨_1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VTD（単位：1000）</fullName>
                </value>
                <value>
                    <fullName>日本円（単位：千円）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CrrntBlInsuranceFeeCurrency_2__c</fullName>
        <label>見込）BL保険料通貨_2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VTD（単位：1000）</fullName>
                </value>
                <value>
                    <fullName>日本円（単位：千円）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CrrntBlInsuranceFeeCurrency_3__c</fullName>
        <label>見込）BL保険料通貨_3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VTD（単位：1000）</fullName>
                </value>
                <value>
                    <fullName>日本円（単位：千円）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CrrntBlInsuranceFee_1__c</fullName>
        <label>見込）BL保険料_1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CrrntBlInsuranceFee_2__c</fullName>
        <label>見込）BL保険料_2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CrrntBlInsuranceFee_3__c</fullName>
        <label>見込）BL保険料_3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CrrntBlMankiDate_1__c</fullName>
        <label>現状）BL満期日_1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntBlMankiDate_2__c</fullName>
        <label>現状）BL満期日_2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntBlMankiDate_3__c</fullName>
        <label>現状）BL満期日_3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntKenshinCostIncur__c</fullName>
        <inlineHelpText>日本負担？
現法負担？
個人負担あり？</inlineHelpText>
        <label>現状）健診費用負担</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntKenshinHardshipAllowances__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>健診の為の帰国制度または規定があるかどうか</inlineHelpText>
        <label>現状）健診ハードシップ手当</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CrrntKenshin__c</fullName>
        <label>現状）健診受診場所</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntOI_Company__c</fullName>
        <label>現状）自動車（強制）保険会社</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntOI_MankiDate__c</fullName>
        <label>現状）自動車（強制）満期日</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntOnSiteInsuranceCompany__c</fullName>
        <label>現状）現地医療保険会社</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntOnSiteInsuranceMankiDate__c</fullName>
        <label>現状）現地医療保険満期日</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntOtaCompany__c</fullName>
        <label>現状）OTA保険会社</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIOIND</fullName>
                </value>
                <value>
                    <fullName>AIU</fullName>
                </value>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>JI</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NK</fullName>
                </value>
                <value>
                    <fullName>SJ</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CrrntOtaMankiDate__c</fullName>
        <label>現状）OTA満期日</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntPassengerInsuranceCompany__c</fullName>
        <label>現状）搭乗者保険会社</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntPassengerMankiDate__c</fullName>
        <label>現状）搭乗者保険満期日</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntVI_Company__c</fullName>
        <label>現状）自動車（任意）保険会社</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrrntVI_MankiDate__c</fullName>
        <label>現状）自動車（任意）満期日</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfResponse__c</fullName>
        <label>フォロー日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>訪問日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EigyoStaff__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>営業社員</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>営業報告</relationshipLabel>
        <relationshipName>R00N10000000ZsplEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field8__c</fullName>
        <formula>CASE(CompanyName__r.CountryName__c , 
&quot;日本&quot;, &quot;日本&quot;, 
&quot;中国&quot;, &quot;中国&quot;, 
&quot;香港&quot;, &quot;香港&quot;, 
&quot;ベトナム&quot;, &quot;ベトナム&quot;, 
&quot;インド&quot;, &quot;インド&quot;, 
&quot;インドネシア&quot;, &quot;インドネシア&quot;, 
&quot;フィリピン&quot;, &quot;フィリピン&quot;, 
&quot;カンボジア&quot;, &quot;カンボジア&quot;, 
&quot;ミャンマー&quot;, &quot;ミャンマー&quot;, 
&quot;スリランカ&quot;, &quot;スリランカ&quot;, 
&quot;マレーシア&quot;, &quot;マレーシア&quot;, 
&quot;シンガポール&quot;, &quot;シンガポール&quot;, 
&quot;その他&quot;)</formula>
        <label>国</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoWith__c</fullName>
        <label>同行者</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupCommonInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>下記内容の場合に、チェックをつける。
・大口企業に登録されている企業のみ入力する。
・メディック新規提案・新種目追加の提案で見込みＣ以上
・その他グループ内で共有すべき重要情報</inlineHelpText>
        <label>グループ内共有情報</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>非会員企業の場合、
チェックします。</inlineHelpText>
        <label>会員・非会員</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Naiyo__c</fullName>
        <label>報告内容</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>今後の展開</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OfficerComment__c</fullName>
        <label>役員コメント</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrspctAnshin__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）安心生活</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctAnzen__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）安全万里</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctBl_1__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）BL_1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctBl_2__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない 
既契約・・・契約済み 
無・・・対象無し</inlineHelpText>
        <label>見込）BL_2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctBl_3__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない 
既契約・・・契約済み 
無・・・対象無し</inlineHelpText>
        <label>見込）BL_3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctItemBl_1__c</fullName>
        <label>見込種目）BL_1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>財産保険</fullName>
                </value>
                <value>
                    <fullName>財産一切保険</fullName>
                </value>
                <value>
                    <fullName>公衆責任保険</fullName>
                </value>
                <value>
                    <fullName>機械保険</fullName>
                </value>
                <value>
                    <fullName>現金保険</fullName>
                </value>
                <value>
                    <fullName>オフィスパッケージ</fullName>
                </value>
                <value>
                    <fullName>団体傷害/医療保険</fullName>
                </value>
                <value>
                    <fullName>雇主責任保険</fullName>
                </value>
                <value>
                    <fullName>雇主工傷</fullName>
                </value>
                <value>
                    <fullName>PL保険</fullName>
                </value>
                <value>
                    <fullName>物流</fullName>
                </value>
                <value>
                    <fullName>運送賠償</fullName>
                </value>
                <value>
                    <fullName>ゴルファー</fullName>
                </value>
                <value>
                    <fullName>住宅総合</fullName>
                </value>
                <value>
                    <fullName>利益保険</fullName>
                </value>
                <value>
                    <fullName>建設工事保険</fullName>
                </value>
                <value>
                    <fullName>組立工事保険</fullName>
                </value>
                <value>
                    <fullName>逆OTA</fullName>
                </value>
                <value>
                    <fullName>個人意外傷害</fullName>
                </value>
                <value>
                    <fullName>食品責任保険</fullName>
                </value>
                <value>
                    <fullName>住宅賠償保険（ベトナム）</fullName>
                </value>
                <value>
                    <fullName>OTA（香港）</fullName>
                </value>
                <value>
                    <fullName>自動車保険(香港)</fullName>
                </value>
                <value>
                    <fullName>操業停止損害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>搭乗者傷害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>火災(日本)</fullName>
                </value>
                <value>
                    <fullName>賠償(日本)</fullName>
                </value>
                <value>
                    <fullName>傷害(日本)</fullName>
                </value>
                <value>
                    <fullName>自動車(日本)</fullName>
                </value>
                <value>
                    <fullName>貨物運送(日本)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctItemBl_2__c</fullName>
        <label>見込種目）BL_2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>財産保険</fullName>
                </value>
                <value>
                    <fullName>財産一切保険</fullName>
                </value>
                <value>
                    <fullName>公衆責任保険</fullName>
                </value>
                <value>
                    <fullName>機械保険</fullName>
                </value>
                <value>
                    <fullName>現金保険</fullName>
                </value>
                <value>
                    <fullName>オフィスパッケージ</fullName>
                </value>
                <value>
                    <fullName>団体傷害/医療保険</fullName>
                </value>
                <value>
                    <fullName>雇主責任保険</fullName>
                </value>
                <value>
                    <fullName>雇主工傷</fullName>
                </value>
                <value>
                    <fullName>PL保険</fullName>
                </value>
                <value>
                    <fullName>物流</fullName>
                </value>
                <value>
                    <fullName>運送賠償</fullName>
                </value>
                <value>
                    <fullName>ゴルファー</fullName>
                </value>
                <value>
                    <fullName>住宅総合</fullName>
                </value>
                <value>
                    <fullName>利益保険</fullName>
                </value>
                <value>
                    <fullName>建設工事保険</fullName>
                </value>
                <value>
                    <fullName>組立工事保険</fullName>
                </value>
                <value>
                    <fullName>逆OTA</fullName>
                </value>
                <value>
                    <fullName>個人意外傷害</fullName>
                </value>
                <value>
                    <fullName>食品責任保険</fullName>
                </value>
                <value>
                    <fullName>住宅賠償保険（ベトナム）</fullName>
                </value>
                <value>
                    <fullName>OTA（香港）</fullName>
                </value>
                <value>
                    <fullName>自動車保険(香港)</fullName>
                </value>
                <value>
                    <fullName>操業停止損害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>搭乗者傷害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>火災(日本)</fullName>
                </value>
                <value>
                    <fullName>賠償(日本)</fullName>
                </value>
                <value>
                    <fullName>傷害(日本)</fullName>
                </value>
                <value>
                    <fullName>自動車(日本)</fullName>
                </value>
                <value>
                    <fullName>貨物運送(日本)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctItemBl_3__c</fullName>
        <label>見込種目）BL_3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>財産保険</fullName>
                </value>
                <value>
                    <fullName>財産一切保険</fullName>
                </value>
                <value>
                    <fullName>公衆責任保険</fullName>
                </value>
                <value>
                    <fullName>機械保険</fullName>
                </value>
                <value>
                    <fullName>現金保険</fullName>
                </value>
                <value>
                    <fullName>オフィスパッケージ</fullName>
                </value>
                <value>
                    <fullName>団体傷害/医療保険</fullName>
                </value>
                <value>
                    <fullName>雇主責任保険</fullName>
                </value>
                <value>
                    <fullName>雇主工傷</fullName>
                </value>
                <value>
                    <fullName>PL保険</fullName>
                </value>
                <value>
                    <fullName>物流</fullName>
                </value>
                <value>
                    <fullName>運送賠償</fullName>
                </value>
                <value>
                    <fullName>ゴルファー</fullName>
                </value>
                <value>
                    <fullName>住宅総合</fullName>
                </value>
                <value>
                    <fullName>利益保険</fullName>
                </value>
                <value>
                    <fullName>建設工事保険</fullName>
                </value>
                <value>
                    <fullName>組立工事保険</fullName>
                </value>
                <value>
                    <fullName>逆OTA</fullName>
                </value>
                <value>
                    <fullName>個人意外傷害</fullName>
                </value>
                <value>
                    <fullName>食品責任保険</fullName>
                </value>
                <value>
                    <fullName>住宅賠償保険（ベトナム）</fullName>
                </value>
                <value>
                    <fullName>OTA（香港）</fullName>
                </value>
                <value>
                    <fullName>自動車保険(香港)</fullName>
                </value>
                <value>
                    <fullName>操業停止損害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>搭乗者傷害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>火災(日本)</fullName>
                </value>
                <value>
                    <fullName>賠償(日本)</fullName>
                </value>
                <value>
                    <fullName>傷害(日本)</fullName>
                </value>
                <value>
                    <fullName>自動車(日本)</fullName>
                </value>
                <value>
                    <fullName>貨物運送(日本)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctKenshin__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）健診</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctMD__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち
A・・・これから請求書発行
　　　又は これから書類手続き
B・・・内諾を頂いている
　　　又は これから詳細内容決定作業
C・・・提案済み かつ検討中
D・・・今年度は無理だが次年度は
　　　見込あり（再アプローチ）
×・・・提案済みだが全く見込なし
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）MD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctNumAnshin__c</fullName>
        <label>見込人数）安心生活</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumAnzen__c</fullName>
        <label>見込台数）安全万里</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumCB__c</fullName>
        <label>見込人数）CB</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumKenshin__c</fullName>
        <label>見込人数）健診</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumMDAsianF__c</fullName>
        <label>見込人数）MD　Asian_F</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumMDAsianM__c</fullName>
        <label>見込人数）MD　Asian_M</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumMDAsianS__c</fullName>
        <label>見込人数）MD　Asian_S</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumMDCVF__c</fullName>
        <label>見込人数）MD　C&amp;V_F</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumMDCVM__c</fullName>
        <label>見込人数）MD　C&amp;V_M</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumMDCVS__c</fullName>
        <label>見込人数）MD　C&amp;V_S</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumOI__c</fullName>
        <label>見込台数）自動車（強制）</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumOta__c</fullName>
        <label>見込人数）OTA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumSelfInsuranceEtc__c</fullName>
        <label>見込人数）自家保険等</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumTyuzai__c</fullName>
        <label>見込人数）駐在中国</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumVI__c</fullName>
        <label>見込台数）自動車（任意）</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctNumYuYou__c</fullName>
        <label>見込人数）優You</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctOI__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）自動車（強制）</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctOtaAgency__c</fullName>
        <inlineHelpText>別働体代理店
その他代理店
保険会社直扱</inlineHelpText>
        <label>見込）OTA代理店</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>